# ferry

./: .dockerignore  .gitguardian.yaml  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  app.py  config.yml  duckdb_to_duckdb.duckdb  main.py  models.py  package-lock.json  pyproject.toml  pytest.ini  readme.md  requirements.txt  s3_to_duckdb19.duckdb  secrets.txt  showcase.ipynb  source.duckdb  stroke_db.duckdb  test_secret.txt
.github/: gitleaks.toml
.github/workflows/: ci.yml  docs.yml  gitleaks-gitguardian.yml  publish.yml  secret-scan.yml
docs/: index.md
docs/.vitepress/: config.mts
docs/apis/: append-write-disposition.md  basic.md  incremental-loading.md  ingest.md  merge-delete-insert.md  merge-scd2.md  merge-upsert.md  observe.md  replace-write-disposition.md
docs/cli/: coming-soon.md
docs/destinations/: athena.md  bigquery.md  clickhouse.md  duckdb.md  motherduck.md  mysql.md  postgres.md  snowflake.md  sqlite.md
docs/gRPC/: coming-soon.md  getting-started.md  index.md
docs/guides/: getting-started.md  incremental-loading.md  merge-delete-insert.md  merge-scd2.md  merge-strategies.md  merge-upsert.md  observability.md  wd-append.md  wd-merge.md  wd-replace.md  why-ferry.md  write-disposition.md
docs/sources/: clickhouse.md  duckdb.md  google_cloud_storage.md  kafka.md  mariadb.md  mongodb.md  mysql.md  postgres.md  s3.md  sqlite.md
ferry/: main.py
ferry/.ferry/: server_secrets.json
ferry/src/: database_uri_validator.py  destination_factory.py  exceptions.py  ferry_log_collector.py  log_collector.py  pipeline.py  pipeline_builder.py  pipeline_metrics.py  pipeline_utils.py  security.py  source_factory.py  tasks.py  uri_validator-deprecate.py  uri_validator.py  uri_validator_v2.py
ferry/src/data_models/: append_config_model.py  incremental_config_model.py  ingest_model.py  merge_config_model.py  replace_config_model.py  response_models.py  schema_request_model.py
ferry/src/destinations/: athena_destination.py  big_query_destination.py  clickhouse_destination.py  databricks_destination.py  destination_base.py  duckdb_destination.py  motherduck_destination.py  mssql_destination.py  postgres_destination.py  redshift_destination.py  s3_destination.py  snowflake_destination.py  sql_alchemy_destination.py  syanpse_destination.py
ferry/src/grpc/: ferry_pb2.py  ferry_pb2_grpc.py  grpc_client-kafka.py  grpc_client-secret.py  grpc_client-win.py  grpc_client-wsl.py  grpc_client.py  grpc_observability.py  grpc_server.py
ferry/src/logging/: ferry_log_collector.py
ferry/src/restapi/: app.py  app_old.py  config.py  database_uri_validator.py  models.py  pipeline_utils.py
ferry/src/sources/: azure_storage_source.py  clickhouse_source.py  confluent_kafka_source.py  duckdb_source.py  gcs_source.py  kafka_source.py  local_file_source.py  mongodb_source.py  postgres_source.py  s3_source.py  source_base.py  sql_db_source.py  sql_source.py
ferry/src/validation/: uri_validator.py
ferry/tests/: test_databas_uri_validator.py  test_destination_factory.py  test_log_collector.py  test_pipeline_builder.py  test_pipeline_metrics.py  test_source_factory.py  test_uri_validator.py
ferry/tests/data_models/: test_append_config_model.py  test_incremental_config_model.py  test_ingest_model.py  test_merge_config_model.py  test_replace_config_model.py  test_resource_config.py  test_response_models.py
ferry/tests/destinations/: test_duckdb_destination.py  test_duckdb_destinations.py  test_postgres_destination.py
ferry/tests/grpc/: test_grpc_server.py
ferry/tests/restapi/: test_app.py  (+3 more)
logs/: test_s3_307.jsonl  test_s3_308.jsonl  tmp6f6w6iix.jsonl
schemas/: s3_to_duckdb9.schema.yaml
(+24 files in other folders)
