[project]
name = "ferry"
dynamic = ["version"]
description = "Add your description here"
readme = "readme.md"
authors = [
    { name = "anirudh-69", email = "sanirudh012@gmail.com" },
    { name = "nikhilfernandes", email = "fernandes.nikhil@gmail.com" },
    { name = "Shravani1383", email = "shravanimjagtap13@gmail.com" }
]
requires-python = ">=3.9"
dependencies = [
    "typer==0.15.1",
    "fastapi==0.115.8",
    "uvicorn==0.34.0",
    "dlt==1.6.1",
    "pyyaml",
    "sqlalchemy==2.0.38",
    "httpx==0.28.1",
    "pandas==2.2.3",
    "ruff>=0.11.2",
    "pre-commit>=4.2.0",
    "testcontainers>=4.10.0",
]

[project.optional-dependencies]
postgres = ["psycopg2==2.9.10"]
aws = ["boto3==1.37.1"]
duckdb = ["duckdb-engine==0.15.0", "duckdb==1.2.1", "dlt[duckdb]==1.6.1"]
clickhouse = ["clickhouse-sqlalchemy==0.3.2", "clickhouse-connect==0.8.15", "dlt[clickhouse]==1.6.1"]
snowflake = ["snowflake-sqlalchemy==1.7.3", "dlt[snowflake]==1.6.1"]
bigquery = ["dlt[bigquery]==1.6.1"]
databricks = ["dlt[databricks]==1.6.1"]
synapse = ["dlt[synapse]==1.6.1"]
mssql = ["dlt[mssql]==1.6.1"]
redshift = ["dlt[redshift]==1.6.1"]
motherduck = ["dlt[motherduck]==1.6.1"]
sqlalchemy = ["dlt[sqlalchemy]==1.6.1"]
qdrant = ["dlt[qdrant]==1.6.1"]
athena = ["dlt[athena]==1.6.1"]
mongodb = ["pymongo==4.11.2"]
kafka = ["confluent-kafka==2.10.0","fastavro==1.10.0"]
Authlib = ["Authlib==1.5.2"]
filesystem = ["dlt[filesystem]==1.6.1"]
pendulum = ["dlt-pendulum==3.0.2"]
testing = ["pytest==8.3.4", "pytest-asyncio==0.25.3"]

[project.scripts]
ferry = "ferry.main:main"

[build-system]
requires = ["hatchling==1.27.0", "hatch-vcs==0.4.0"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.hatch.version]
source = "vcs"

[tool.uv]
index = [
    { name = "testpypi", url = "https://test.pypi.org/simple/", publish-url = "https://test.pypi.org/legacy/", priority = 100, explicit = true }
]
